force-app/main/default/objects/Custom_Datatable__mdt/Custom_Datatable__mdt.object-meta.xml
<CustomObject>
    <label>Approval Configuration</label>
    <pluralLabel>Approval Configurations</pluralLabel>
</CustomObject>