force-app/main/default/objects/Custom_Datatable__mdt/fields/Object_Fields__c.field-meta.xml
<CustomField>
    <fullName>Object_Fields__c</fullName>
    <label>Object Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>