force-app/main/default/objects/Custom_Datatable__mdt/fields/Object_Header__c.field-meta.xml
<CustomField>
    <fullName>Object_Header__c</fullName>
    <label>Object Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>