force-app/main/default/objects/Custom_Datatable__mdt/fields/Show_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Show_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Chatter</label>
    <type>Checkbox</type>
</CustomField>