force-app/main/default/objects/Custom_Datatable__mdt/fields/Show_Comments__c.field-meta.xml
<CustomField>
    <fullName>Show_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Comments</label>
    <type>Checkbox</type>
</CustomField>