force-app/main/default/objects/Custom_Datatable__mdt/fields/Show_Details__c.field-meta.xml
<CustomField>
    <fullName>Show_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Details</label>
    <type>Checkbox</type>
</CustomField>